working on login

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,15 @@
             </div>
         </nav>
         <br>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         <div class="container">
             {% block container %}{% endblock %}
         </div>
