--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}
 
 {% block container %}
-    <div class="top-pad">
-        <h1>Please Log-In</h1>
-        <br>
-        <form action="" method="post">
-                <input type="text" placeholder="Username" name="username" value="{{
-                  request.form.username }}">
-                 <input type="password" placeholder="Password" name="password" value="{{
-                  request.form.password }}">
-                <input class="btn btn-outline-success" type="submit" value="Login">
-        </form>
-        {% if error %}
-            <p class="error"><strong>Error:</strong> {{ error }}
-        {% endif %}
-    </div>
+    <center>
+    <h1>Sign In</h1>
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br>
+            {{ form.username(size=32) }}
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit() }}</p>
+    </center>
+    </form>
 {% endblock %}
