--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,11 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        {% if current_user.is_anonymous %}
                         <a class="nav-link" href="{{ url_for('login') }}">Log-In</a>
+                        {% else %}
+                        <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
