--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 
 {% block container %}
     <div class="top-pad">
-        <h1>Hello {{ user['username'] }}!</h1>
+        <h1>Hello {{ current_user.username }}!</h1>
         <p>This is your profile!</p>
     </div>
 {% endblock %}
