--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,10 +3,14 @@
 {% block container %}
     <div class="top-pad">
         <h1>Hello {{ current_user.username }}!</h1>
+        <br>
+        {% if not classlist %}
+        <p>You are currently not signed up for any classes.</p>
+        {% else %}
         <p> You are signed up for: </p>
         {% for class in classlist %}
         <p> {{ class.name }}</p>
         {% endfor %}
-        <p>This is your profile!</p>
+        {% endif %}
     </div>
 {% endblock %}
