--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,10 @@
         <p> You are signed up for: </p>
         {% for class in classlist %}
         <p> {{ class.name }}</p>
+        <form action="{{ url_for('unregister', classname=class['name']) }}" method=POST>
+                {{ form.hidden_tag() }}
+                {{ form.submit(value='Unregister') }}
+        </form>
         {% endfor %}
         {% endif %}
     </div>
