--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -7,7 +7,8 @@
 
          <div class="jumbotron">
             <h1 class="display-4"> Andrew Jiang </h1>
-            <p class="lead"> b</p>
+            <p><center><img src="{{url_for('static', filename='andrew.jpg')}}" align="middle" /></center></p>
+            <p class="lead"> Andrew is an incoming freshman at the University of Pennsylvania. He's planning on double majoring in Computer Science and Economics in the College of Arts and Sciences. He's a multiple time AIME Qualifier, National Merit Finalist, and a National AP Scholar. In high school, he was part of the Policy debate team, and often competed at the highest level at national tournaments.</p>
          </div>
 
          <div class="jumbotron">
@@ -23,7 +24,8 @@
 
          <div class="jumbotron">
             <h1 class="display-4"> Walter Guo </h1>
-            <p class="lead"> b</p>
+            <p><center><img src="{{url_for('static', filename='walter.jpg')}}" align="middle" /></center></p>
+            <p class="lead"> Walter is a first year at the University of Michigan in the College of Literature, Science and the Arts. He is working towards completing a double major in Statistics and Computer Science. Walter has had experience teaching math up through Multivariable Calculus and Linear Algebra. He was also actively involved in the local and national Policy debate circuit, often competing at the highest level in national tournaments. </p>
          </div>
 
     </div>
