--- a/templates/home.html
+++ b/templates/home.html
@@ -9,13 +9,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <center><img src="http://clipart-library.com/img/1785835.jpg" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide1.jpg')}}" class="d-block w-10" alt="..."></center>
           </div>
           <div class="carousel-item">
-            <center><img src="https://making-the-web.com/sites/default/files/clipart/162043/person-studying-cliparts-162043-7934401.png" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide2.png')}}" class="d-block w-10" alt="..."></center>
           </div>
           <div class="carousel-item">
-            <center><img src="https://making-the-web.com/sites/default/files/clipart/162043/person-studying-cliparts-162043-5980716.jpg" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide3.jpg')}}" class="d-block w-10" alt="..."></center>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
