--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -18,14 +18,14 @@
          </div>
 
          <div class="jumbotron">
-            <h1 class="display-4"> Brian Li </h1>
-            <p class="lead"> b</p>
-         </div>
-
-         <div class="jumbotron">
             <h1 class="display-4"> Walter Guo </h1>
             <p><center><img src="{{url_for('static', filename='walter.jpg')}}" align="middle" /></center></p>
             <p class="lead"> Walter is a first year at the University of Michigan in the College of Literature, Science and the Arts. He is working towards completing a double major in Statistics and Computer Science. Walter has had experience teaching math up through Multivariable Calculus and Linear Algebra. He was also actively involved in the local and national Policy debate circuit, often competing at the highest level in national tournaments. </p>
+         </div>
+
+         <div class="jumbotron">
+            <h1 class="display-4"> Brian Li </h1>
+            <p class="lead"> </p>
          </div>
 
     </div>
