--- a/templates/home.html
+++ b/templates/home.html
@@ -28,11 +28,11 @@
         </a>
     </div>
     <div class="top-pad">
-        <h1>Summer 2020 Tutoring Thing</h1>
+        <h1>Summer 2020 Tutoring</h1>
     </div>
     <center>
     <p>
-        Hi! We're a group of alumni from the College Preparatory School aiming to help students across the country get ahead on classes or curriculum that they may have missed due to quarantine. One of the rare benefits of quarantine is that we'll be able to reach out not just to students locally, but all across the country. So why us? We're a group of students representing myriad colleges and universities, such as Harvard, UPenn, UMich, and more! Moreover, our sole focus this summer will be on designing and perfecting curriculum, which means we'll be dedicated towards making sure your child succeeds!  
+        Hi! We're a group of alumni from the College Preparatory School aiming to help students across the country get ahead on classes or curriculum that they may have missed due to quarantine. One of the rare benefits of quarantine is that we'll be able to reach out not just to students locally, but all across the country. So why us? We're a group of students representing a number of top public, private, and liberal arts colleges and universities, such as Harvard, UPenn, UMich, and Swarthmore! Moreover, our sole focus this summer will be on designing and perfecting curriculum, which means we'll be dedicated towards making sure your child succeeds!  
     </p>
     </center>
 {% endblock %}
