--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,10 @@
             {% endfor %}
         </p>
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p>
+            Forgot Your Password?
+            <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+        </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </center>
