--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
         </a>
     </div>
     <div class="top-pad">
-        <h1>Summer 2020 Tutoring</h1>
+        <h1>East Bay Academics</h1>
     </div>
     <center>
     <p>
