--- a/templates/unregister/unregisteremail.html
+++ b/templates/unregister/unregisteremail.html
@@ -1,6 +1,6 @@
-<p>Dear Andrew,</p>
+<p>Dear Tutors,</p>
 
 <p>{{ user.username }} has unregistered for {{ classname }}.</p>
 
 <p>Sincerely,</p>
-<p>Tutoring Company Name</p>
+<p>East Bay Academics</p>
