--- a/templates/home.html
+++ b/templates/home.html
@@ -9,13 +9,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <center><img src="{{url_for('static', filename='slide1.jpg')}}" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide1.jpg')}}" width="1000" height="800" alt="..."></center>
           </div>
           <div class="carousel-item">
-            <center><img src="{{url_for('static', filename='slide2.png')}}" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide2.png')}}" width="1000" height="800" alt="..."></center>
           </div>
           <div class="carousel-item">
-            <center><img src="{{url_for('static', filename='slide3.jpg')}}" class="d-block w-10" alt="..."></center>
+            <center><img src="{{url_for('static', filename='slide3.png')}}" width="1000" height="800" alt="..."></center>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,7 +32,7 @@
     </div>
     <center>
     <p>
-        Hi! We're a group of alumni from the College Preparatory School aiming to help students across the country get ahead on classes or curriculum that they may have missed due to quarantine. One of the rare benefits of quarantine is that we'll be able to reach out not just to students locally, but all across the country. So why us? We're a group of students representing a number of top public, private, and liberal arts colleges and universities, such as Harvard, UPenn, UMich, and Swarthmore! Moreover, our sole focus this summer will be on designing and perfecting curriculum, which means we'll be dedicated towards making sure your child succeeds!  
+        Hi! We're a group of alumni from the College Preparatory School aiming to help students across the country get ahead on classes or curriculum that they may have missed due to quarantine. One of the rare benefits of quarantine is that we'll be able to reach out not just to students locally, but all across the country. So why us? We're a group of students representing a number of top public, private, and liberal arts colleges and universities, such as UPenn, UMich, and Swarthmore! Moreover, our sole focus this summer will be on designing and perfecting curriculum, which means we'll be dedicated towards making sure your child succeeds!  
     </p>
     </center>
 {% endblock %}
