--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,13 @@
     </div>
     <center>
     <p>
-        Hi! We're a group of alumni from the College Preparatory School aiming to help students across the country get ahead on classes or curriculum that they may have missed due to quarantine. One of the rare benefits of quarantine is that we'll be able to reach out not just to students locally, but all across the country. So why us? We're a group of students representing a number of top public, private, and liberal arts colleges and universities, such as UPenn, UMich, and Swarthmore! Moreover, our sole focus this summer will be on designing and perfecting curriculum, which means we'll be dedicated towards making sure your child succeeds!  
+        Hello! We are a group of alumni from The College Preparatory School. The aim of these classes are to help students feel more confident in their skills and abilities in preparation for the coming school year. We aim to provide a dedicated and specialized educational experience for students in both classroom and 1 on 1 settings. We have experience tutoring a wide range of subjects and have worked with a wide range of students. 
+    </p>
+    <p>
+    We're a group of students who attend many of the top public, private, and liberal arts colleges and universities, such as UPenn, UMich, and Swarthmore! We are very confident that the preparations we have made towards this educational endeavor in addition to the education we have received allows us to give high quality education without overcharging.
+    </p>
+    <p>
+    We hope you choose us to help you and your children feel more confident going into this coming and future academic years! If you have any questions please refer to our email. 
     </p>
     </center>
 {% endblock %}
