--- a/templates/emaillist/emaillist.html
+++ b/templates/emaillist/emaillist.html
@@ -1,5 +1,3 @@
-Here are the emails: 
+<p>Here's {{ user.username }} 's email. </p>
 
-{% for user in users %}
 <p>{{ user.email }}</p>
-{% endfor %}
