--- a/templates/register/registeremail.html
+++ b/templates/register/registeremail.html
@@ -1,6 +1,6 @@
 <p>Dear Andrew,</p>
 
 <p>{{ user.username }} has registered for {{ classname }}.</p>
-
+<p>Their email is {{ user.email }} </p>
 <p>Sincerely,</p>
 <p>East Bay Academics</p>
